<?xml version="1.0"?>
<package format="2">
  <name>era_5g_netapp_reference_client</name>
  <version>0.1.0</version>
  <description>The era_5g_netapp_reference_client package</description>

  <maintainer email="ikapinus@fit.vutbr.cz">Michal Kapinus</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
