[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "era_5g_netapp_client"
version = "0.0.1"
authors = [
  { name="Michal Kapinus", email="ikapinus@fit.vutbr.cz" },
]
description = "A client for 5G-ERA NetApps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

