[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "era_5g_network_application_template"
version = "0.0.1"
authors = [
  { name="Amy Pond", email="amy.pond@tardis.earth" },
]
description = "Template for the network application"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

